# onnx-simplifier

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  build_wasm.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-test.yml  sanitizer.yml  static.yml  windows-cross.yml
cmake/: build_ort.cmake
onnxsim/: __init__.py  backend.py  cpp2py_export.cc  model_checking.py  onnx_simplifier.py  onnxsim.cpp  onnxsim.h  test_utils.py
scripts/: gc_testpypi.py  leak.txt
scripts/convertmodel/: index.html  interface.cpp  onnxsim.js  onnxsim.wasm  worker.js
scripts/cross/: README.md  build_windows_wheel.sh  windows-clang-cl.toolchain.cmake  windows-llvm-mingw.toolchain.cmake
scripts/onnx-simplifier/: pyproject.toml
tests/: test_backend.py  test_fusion_patterns.py  test_python_api.py  test_simple.py
