[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "onnxsim"
dynamic = ["version"]
description = "Simplify your ONNX model"
readme = "README.md"
license = {text = "MIT AND (Apache-2.0 OR BSD-2-Clause)"}
requires-python = ">=3.10"
dependencies = [
    "onnx",
    "rich",
]
authors = [
    {name = "ONNX Simplifier Authors", email = "daquexian566@gmail.com"},
]
keywords = ["deep-learning", "ONNX"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

[project.optional-dependencies]
# onnxruntime is preferred for constant folding and correctness checking.
# When it is not installed, onnxsim falls back to onnx's reference evaluator.
onnxruntime = ["onnxruntime >= 1.6.0"]

[project.urls]
Homepage = "https://github.com/onnxsim/onnxsim"

[project.scripts]
onnxsim = "onnxsim:main"
